--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
+  supabase: ^1.4.0
+  supabase_flutter: ^1.3.1
+
   #UI
   google_fonts: ^2.1.0
   flutter_signin_button: ^2.0.0
