--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   supabase: ^1.4.0
   supabase_flutter: ^1.3.1
 
+  shared_preferences: ^2.0.17
+
   #UI
   google_fonts: ^2.1.0
   flutter_signin_button: ^2.0.0
